--- a/MeshGO/MeshGO/Views/MeshView.xaml
+++ b/MeshGO/MeshGO/Views/MeshView.xaml
@@ -46,7 +46,7 @@
             <Button x:Name="generateRandomTriangle" Margin="10" Background="#FF8522BD" IsEnabled="False" BorderBrush="#FF8522BD" Click="generateRandomTriangle_Click">
                 <Grid Width="150">
                     <materialDesign:PackIcon Kind="Autorenew" VerticalAlignment="Center"/>
-                    <TextBlock HorizontalAlignment="Center" Text="RND SQ MESH" FontFamily="Champagne &amp; Limousines"/>
+                    <TextBlock HorizontalAlignment="Center" Text="RND TRG MESH" FontFamily="Champagne &amp; Limousines"/>
                 </Grid>
             </Button>
         </StackPanel>
